--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     - name: push amd64
-      run: docker buildx build --platform linux/amd64 -t ${{ secrets.DOCKERHUB_USER }}/luogu-cookie-getter:latest -f Dockerfile . --push
+      run: docker buildx build --platform linux/amd64 --platform linux/arm64 -t ${{ secrets.DOCKERHUB_USER }}/luogu-cookie-getter:latest -f Dockerfile . --push
