--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,5 +21,5 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    - name: push amd64
-      run: docker buildx build --platform linux/amd64 --platform linux/arm64 -t ${{ secrets.DOCKERHUB_USER }}/luogu-cookie-getter:latest -f Dockerfile . --push
+    - name: push image
+      run: docker buildx build --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKERHUB_USER }}/luogu-cookie-getter:latest -f Dockerfile . --push
